oem-config (1.54.12) UNRELEASED; urgency=low

  * Sync with console-setup 1.28ubuntu8: treat the Kazakhstan layout (kz) as
    non-Latin (LP: #356816).
  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 09 Apr 2009 00:26:26 +0100

oem-config (1.54.11) jaunty; urgency=low

  * GTK frontend:
    - Use the full size of the underlying images for the timezone map if the
      screen is big enough.
    - Fix spacing on timezone page (LP: #336745).
  * Don't pass the debconf PURGE command through debconffilter, since we
    don't know the owner of the package calling it (see LP #354534).
  * Update translations from Launchpad.
  * Automatic update of included source packages: user-setup 1.23ubuntu16.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Apr 2009 21:36:39 +0100

oem-config (1.54.10) jaunty; urgency=low

  [ Colin Watson ]
  * Tighten frontend dependencies on oem-config to prevent problems when one
    architecture is out of sync.
  * Set passwd/auto-login=true rather than implementing auto-login ourselves
    (LP: #347900).
  * Suggest checkbox/checkbox-gtk rather than recommending
    hwtest/hwtest-gtk.
  * Update translations from Launchpad.
  * Automatic update of included source packages: console-setup 1.28ubuntu7,
    user-setup 1.23ubuntu15.

  [ Evan Dandrea ]
  * Update the timezone_map to match changes in ubiquity (more accurate
    city placement).
  * Merge in the new KDE time zone map from ubiquity.  Thanks Roman
    Shtylman.

  [ Mario Limonciello ]
  * Change the number of columns in the language icon view to 5.  This 
    should make it fit in 1024x600. (LP: #347350)
  * Remove old hack in gtk frontend to only show scrollbars on language 
    selector when it would be larger than the desktop.  With the hack taken 
    out, the scrollbars aren't showing up on 800x576, which is likely the 
    lowest supportable resolution.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Mar 2009 16:31:14 +0100
